deploy/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: brucewong123/djangov2
        imagePullPolicy: IfNotPresent
        command: [ "/bin/bash", "-ce", "cd data_hub && git pull && pip3 install protobuf && pip3 install numpy && pip3 install sklearn&&  python3 manage.py runserver 0.0.0.0:8000" ]
        ports:
        - containerPort: 8000
      nodeSelector:
        web-server: "true"
      tolerations:
      - key: "web-server"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: django
  name: django-service
  namespace: planning-public-dev
spec:
  type: NodePort
  ports:
  - name: django
    port: 8000
    targetPort: 8000
    nodePort: 30004
  selector:
    app: django
