deploy/django_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: django
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
  namespace: planning-public-dev
spec:
  rules:
  - host: "dataserver.prediction.simulation.deeproute.ai"
    http:
      paths:
      - backend:
          serviceName: django-service
          servicePort: 8000
