deploy/mysql_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mysql-secondary
  namespace: planning-public-dev
spec:
  rules:
  - host: "main.monodb.planning.simulation.deeproute.ai"
    http:
      paths:
      - backend:
          serviceName: mysql-secondary
          servicePort: 3306
